# dation-lms

./: .gitignore  Dockerfile  MANIFEST.in  README.md  __init__.py  certificate_template.html  hooks.py  install.py  modules.txt  setup.py  setup.sh
branded_lms/: course_completion_hooks.py  course_hooks.py  fixtures.json  hooks.py  pyproject.toml  routes.json  setup.py
branded_lms/api/: certificate.py  lms_api.py
branded_lms/branded_lms/: __init__.py  fixtures.json  hooks.py  modules.txt  routes.json  session_hooks.py
branded_lms/branded_lms/dashboard_chart/: billing_status_overview.json
branded_lms/branded_lms/fixtures/: custom_fields.json
branded_lms/branded_lms/patches/: branding_patch.py
branded_lms/branded_lms/public/: build.json
branded_lms/branded_lms/www/: hr_manager_dashboard.html  test-basic.html  test1.html
branded_lms/custom_field/: billing_fields.json
branded_lms/dashboard/: dation_admin_dashboard.json
branded_lms/dashboard_chart/: billing_status_overview.json  invoiceable_enrollments_by_educator.json  monthly_invoiceable_enrollments.json
branded_lms/doctype/course_enrollment/: permissions.json  (+1 more)
branded_lms/fixtures/: custom_docperms.json  custom_fields.json  fixtures.json  roles.json  user_permissions.json
branded_lms/hooks/: hooks.py
branded_lms/patches/: patches.txt
branded_lms/server_script/: auto_assign_roles_on_user_creation.json  get_billing_report.json
branded_lms/workflow/: course_enrollment_workflow.json
branded_lms/www/: certificate_verify.html  company_dashboard.html  educator_dashboard.html  student_dashboard.html
(+45 files in other folders)
